# Rust-Asteroids

./: Cargo.toml  README.md
data/: config.cfg
data/models/debris/: debris_02.mesh  debris_04.mesh  debris_08.mesh  debris_09.mesh  debris_10.mesh  debris_14.mesh  debris_15.mesh
data/models/entity/: bullet.mesh  player.mesh
data/models/meteors/: asteroid_03.mesh  asteroid_04.mesh
src/: main.rs
src/assetsdb_lib/: c_assets_db.rs  e_asset.rs  json_utils.rs  mod.rs  t_file_readable.rs  t_file_writable.rs  t_from_assetref.rs
src/assetsdb_lib/loaders/: c_config_asset_processor.rs  c_meshes_asset_processor.rs  c_sprite_asset_processor.rs  mod.rs  t_asset_loader.rs
src/classes/: bullet_entity.rs  c_app_handler.rs  c_asteroid_entity.rs  c_audio_context.rs  c_debris_entity.rs  c_enemy_entity.rs  c_game.rs  c_input.rs  c_player_entity.rs  c_scene_game.rs  c_scene_menu.rs  c_scene_test.rs  mod.rs  player_entity.rs  t_entity.rs  t_scene.rs  test_object.rs
src/collisions_lib/: col_solver.rs  e_col_layers.rs  mod.rs  t_collision.rs
src/config_lib/: c_config.rs  mod.rs
src/mesh_lib/: c_mesh.rs  mod.rs
src/render_lib/: f_drawers.rs  mod.rs  t_drawable.rs  t_screen_data.rs
src/scenes_lib/: e_scene_event.rs  e_scene_switch.rs  e_sceneid.rs  mod.rs  t_scene.rs
src/sprite_lib/: c_sprite.rs  mod.rs
src/transform_lib/: c_transform.rs  mod.rs
src/uniq_id_lib/: c_entity_id.rs  mod.rs
src/web_lib/: c_web_client.rs  mod.rs
web/asteroids/: data.txt
web/stats/: index.php
