[package]
name = "ASTEROIDS"
version = "0.1.0"
edition = "2024"

[dependencies]
pixels = "0.15.0"
winit = { version = "0.29.11", features = ["rwh_05"] }


egui = "0.27.2"
egui-winit = "0.27.2"
egui-wgpu = { version = "0.27.2", features = ["winit"] }


serde = "1.0.228"
serde_json = "1.0.148"
vek = "0.17.2"
rand = "0.10.0-rc.6"
